--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="transition_detail_name">transition_details</string>
+    <string name="hint_search_dialog">Search Something</string>
+    <string name="app_label">Mercado Libre</string>
+    <string name="search_title">Search</string>
 </resources>
