Better feedback for user in ProductsActivity.kt

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hint_search_dialog">Search Something</string>
     <string name="app_label">Mercado Libre</string>
     <string name="search_title">Search</string>
+    <string name="msg_empty_results">No products for your search</string>
+    <string name="first_message_user">Find what you want</string>
 </resources>
