--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="msg_network_error">No Internet Connection</string>
     <string name="msg_unknown_error">Something went wrong :(</string>
+    <string name="button_title_buy">Buy</string>
 </resources>
