--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="button_title_buy">Buy</string>
     <string name="msg_condition_sell_info">%1$s - %2$d Sold</string>
     <string name="msg_product_price">$ %1$s</string>
+    <string name="msg_description">Description</string>
+    <string name="msg_info_no_available">Information not available</string>
 </resources>
